fixed overflow

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -13,7 +13,7 @@ body {
 
 header {
     height: 210px;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
 }
 
